WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63391
Fix some minor style issues
https://bugs.webkit.org/show_bug.cgi?id=63391
Summary
Fix some minor style issues
Joseph Pecoraro
Reported
2011-06-25 17:16:21 PDT
In code I just added or was around there were some style issues.
Attachments
[PATCH] Style Fixes
(2.80 KB, patch)
2011-06-25 17:31 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2011-06-25 17:31:56 PDT
Created
attachment 98610
[details]
[PATCH] Style Fixes Release build built fine locally.
WebKit Review Bot
Comment 2
2011-06-25 21:04:20 PDT
Comment on
attachment 98610
[details]
[PATCH] Style Fixes Clearing flags on attachment: 98610 Committed
r89760
: <
http://trac.webkit.org/changeset/89760
>
WebKit Review Bot
Comment 3
2011-06-25 21:04:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug